# mcp-use-voice-assistant

./: .env.example  .gitignore  README.md  example.py  mcp_servers.example.json  mcp_servers.json  pyproject.toml
voice_assistant/: __init__.py  agent.py
